<resources>
    <string name="app_name">Swipr</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="facebook_app_id">2474085599495379</string>
    <string name="fb_login_protocol_scheme">fb2474085599495379</string>
    <string name="initial_value">initial_value</string>
    <string name="price_tag">Price: </string>
    <string name="start_time_tag">Start Time: </string>
    <string name="end_time_tag">End Time: </string>
    <string name="dining_hall_tag">Dining Hall: </string>
    <string name="logout_button">LOGOUT</string>
    <string name="buyer_button">BUYER</string>
    <string name="seller_button">SELLER</string>
    <string name="remove_button">Remove</string>
    <string name="status_tag">Status:</string>
    <string name="interest_button">I\'m Interested</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="price">Price:</string>
    <string name="time">Time:</string>
    <string name="dining_hall">Dining Hall Selection</string>
    <string name="post_button">Find me a hungry single!</string>
    <string name="search_button">Find me a Swipe daddy!</string>
    <string name="cancel_button">Who needs a hungry single anyway</string>
    <string name="meet_time">Meet At</string>
    <string name="first_name_user">User</string>
    <string name="here">Here!</string>
    <string name="meet_time_tag">Meet at:</string>
    <string name="preferred_dining_hall_tag">Dining Hall:</string>

</resources>
