...
    android:layout_height="match_parent"
    android:background = "#FDBE4A"
    tools:context=".Login">


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="194dp"
        android:layout_height="68dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
...
